@@ -1,7 +1,5 @@
-# $NetBSD: Makefile,v 1.15 2006/01/04 05:27:20 schmonz Exp $
+# $NetBSD: Makefile,v 1.16 2006/01/07 16:15:46 wiz Exp $
 #
 .include "Makefile.common"
-
-PKGREVISION=	1
 
 .include "../../mk/bsd.pkg.mk"
