@@ -1,10 +1,12 @@
-# $NetBSD: Makefile.common,v 1.18 2006/01/29 01:59:35 rillig Exp $
+# $NetBSD: Makefile.common,v 1.19 2006/03/04 21:30:39 jlam Exp $
 
 DISTNAME=	ast-ksh-${ASTKSH_VERSION}
 PKGNAME=	ast-ksh-${ASTKSH_VERSION:S/-//g}
 CATEGORIES=	shells
-MASTER_SITES=	http://www.research.att.com/~gsf/download/tgz/ \
-		http://ftp.ntua.gr/pub/linux/openpkg/sources/DST/ksh/
+MASTER_SITES=	\
+		http://ftp.ntua.gr/pub/linux/openpkg/sources/DST/ksh/ \
+		ftp://ftp.ntua.gr/pub/linux/openpkg/sources/DST/ksh/ \
+		http://www.research.att.com/~gsf/download/tgz/
 DISTFILES=	INIT.${ASTKSH_VERSION}.tgz ast-ksh.${ASTKSH_VERSION}.tgz
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -22,7 +24,7 @@ NO_BIN_ON_FTP=	${RESTRICTED}
 NO_SRC_ON_CDROM=${RESTRICTED}
 NO_SRC_ON_FTP=	${RESTRICTED}
 
-ASTKSH_VERSION=	2003-07-24
+ASTKSH_VERSION=	2005-02-02
 
 WRKSRC=		${WRKDIR}
 MAKE_FLAGS+=	CC=${CC:Q} CCFLAGS=${CFLAGS:M*:Q}
